k8s/helm/bugbase/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bugbase-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /prod/issue(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: prod-bugbase-issue-service
                port:
                  number: 8080
          - path: /prod/()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: prod-bugbase-static-service
                port:
                  number: 8081
          - path: /prod/bulk(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: prod-bugbase-bulk-service
                port:
                  number: 8082
          - path: /prod/ingress(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: prod-bugbase-ingress-service
                port:
                  number: 8083
          - path: /prod/login(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: prod-bugbase-login-service
                port:
                  number: 8084
          - path: /dev/issue(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: dev-bugbase-issue-service
                port:
                  number: 9090
          - path: /dev/()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: dev-bugbase-static-service
                port:
                  number: 9091
          - path: /dev/bulk(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: dev-bugbase-bulk-service
                port:
                  number: 9092
          - path: /dev/ingress(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: dev-bugbase-ingress-service
                port:
                  number: 9093
          - path: /dev/login(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: dev-bugbase-login-service
                port:
                  number: 9094
